--- a/style.css
+++ b/style.css
@@ -1,3 +1,40 @@
+body {
+    font-family: 'Inter', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+}
 h1{
-    color: red;
+    font-size: 50px;
+}
+h2{
+    font-size: 20px;
+}
+.orange-color{
+    color: orangered;
+}
+.header-bg{
+    display: flex;
+}
+.half-width{
+    width: 50%;
+    padding-left: 6%;
+}
+.half-width img{
+    width: 80%;
+}
+.half-width a{
+    text-decoration: none;
+    background-image: linear-gradient(orange,tomato);
+    padding: 12px 35px;
+    border-radius: 5px;
+    color: white;
+    margin-top: 10px;
+    display: inline-block;
+    font-weight: 700;
+}
+.bg{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+    
 }
