--- a/style.css
+++ b/style.css
@@ -17,11 +17,12 @@ h2{
     display: flex;
 }
 .half-width{
-    width: 50%;
-    padding-left: 6%;
+    width: 70%;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 .half-width img{
-    width: 80%;
+    width: 100%;
 }
 .half-width a{
     text-decoration: none;
@@ -37,4 +38,11 @@ h2{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
     
+}
+
+.middle{
+    margin-top: 80px;
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
